--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ author:
   # Biographic information
   avatar           : "profile.png"
   name             : "Liang Liu (刘亮)"
-  pronouns         : "he/him"   
+  pronouns         :   
   bio              : "Master's student at Soochow University"
   location         : "Suzhou, China"
   employer         : "Soochow University"
