--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ author:
   avatar           : "profile.png"
   name             : "Liang Liu (刘亮)"
   pronouns         :   
-  bio              : "Master's student at Soochow University"
+  bio              : "Master's student"
   location         : "Suzhou, China"
   employer         : "Soochow University"
   uri              : # URL
