--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ repository               : "trueBatty/trueBatty.github.io"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "profile.png"
+  avatar           : "profile.jpg"
   name             : "Liang Liu (刘亮)"
   pronouns         :   
   bio              : "Master's student"
