--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -12,13 +12,8 @@ main:
     url: /#recent-news
 
   - title: "Publications"
-    url: /talks/    
+    url: /#publications    
 
-  - title: "Teaching"
-    url: /teaching/    
-    
-  - title: "Portfolio"
-    url: /portfolio/
         
   - title: "Blog Posts"
     url: /year-archive/
