--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -9,10 +9,10 @@
 
 main:
   - title: "News"
-    url: /#recent-news
+    url: /#-news
 
   - title: "Publications"
-    url: /#publications    
+    url: /#-publications    
 
         
   - title: "Blog Posts"
