--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@
 locale                   : "en-US"
 site_theme               : "default"
 title                    : "Liang's Homepage"
-# title_separator          : "-"
+title_separator          : "-"
 name                     : &name "Liang Liu"
 description              : &description "personal description"
 url                      : https://trueBatty.github.io # the base hostname & protocol for your site e.g. "https://[your GitHub username].github.io"
