--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -14,6 +14,8 @@ main:
   - title: "Publications"
     url: /#publications    
 
+  - title: "Educations"
+    url: /#educations
         
   - title: "Blog Posts"
     url: /year-archive/
