--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ author:
   avatar           : "longtu.jpg"
   name             : "Liang Liu (刘亮)"
   pronouns         :   
-  bio              : "Master's student"
+  bio              : "Work Hard, Play Hard"
   location         : "Suzhou, China"
   employer         : "Soochow University"
   uri              : # URL
