--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -16,6 +16,9 @@ main:
 
   - title: "Educations"
     url: /#educations
+
+  - title: "Internships"
+    url: /#internships
         
   - title: "Blog Posts"
     url: /year-archive/
