--- a/_config.yml
+++ b/_config.yml
@@ -26,8 +26,8 @@ author:
   name             : "Liang Liu (刘亮)"
   pronouns         :   
   bio              : "Work Hard, Play Hard"
-  location         : "Suzhou, China"
-  employer         : "Soochow University"
+  location         : "Shenzhen, China"
+  employer         : "Sun Yat-sen University"
   uri              : # URL
   email            : "trueliuliang@gmail.com" 
 
