--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -9,16 +9,16 @@
 
 main:
   - title: "News"
-    url: /#news
+    url: /#-news
 
   - title: "Publications"
-    url: /#publications    
+    url: /#-publications    
 
   - title: "Educations"
-    url: /#educations
+    url: /#-educations
 
   - title: "Internships"
-    url: /#internships
+    url: /#-internships
         
   - title: "Blog Posts"
     url: /year-archive/
